Correct spacing between elements inside card
Removed browser default margins for title element and added top margin
to divs inside card element.

TOP CSS assignment margin-and-padding 02

--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -8,10 +8,15 @@ body {
   background: #fff;
   margin: 16px auto;
   padding: 8px;
+
+  & div {
+    margin-top: 8px;
+  }
 }
 
 .title {
   background: #e3f4ff;
+  margin: 0;
 }
 
 .content {
